# eurostartrainfinder

./: Cargo.toml  README.md
src/: date.rs  lib.rs  main.rs  process.rs  query.rs  trains.rs
src/test_resources/: response.json  stations.json
