[package]
name = "eurostarchecker"
version = "0.1.0"
authors = ["Mateusz Moneta <mateuszmoneta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
chrono = "0.4.11"
phf = {version = "0.8.0", features = ["macros"]}

[lib]
name = "eurostar"
path = "src/lib.rs"

[[bin]]
name = "eurostar"
path = "src/main.rs"
