[package]
name = "eurostarchecker"
version = "0.1.0"
authors = ["Mateusz Moneta <mateuszmoneta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
chrono = "0.4.11"
prettytable-rs = "0.8.0"
reqwest = {version = "0.10.4", features = ["json"]}
log = "0.4.8"
stderrlog = "0.4.3"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.50"
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros"] }
mockito = "0.23.3"
maplit = "1.0.2"
